# text-classifier

./: README.md  pyproject.toml  sentiment.ipynb
assets/: yelp_labelled.txt:Zone.Identifier
