[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["aghyad albalkhi <aghyadalbalkhi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.5"
jupyterlab = "^2.2.9"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
